<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/black">
    <TextView
            android:text="@string/hi_try_to_guess_a_randomized_word_good_luck"
            android:layout_width="388dp"
            android:layout_height="54dp"
            android:id="@+id/welcomeTV" android:layout_marginTop="11dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/colorPrimaryDark" android:textSize="22sp"
            android:textStyle="bold" android:textAlignment="center"/>
    <TextView
            android:text="@string/has_o"
            android:layout_width="392dp"
            android:layout_height="52dp"
            android:id="@+id/wordTV" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/white" android:textStyle="bold"
            android:textSize="27sp" android:textAlignment="center" android:paddingTop="15dp"/>
    <TextView
            android:text="@string/give_a_letter"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:id="@+id/giveLetterTV"
            android:textColor="@color/colorPrimaryDark" android:textAlignment="gravity"
            android:textSize="22sp" android:paddingTop="10dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/wordTV"/>
    <EditText
            android:layout_width="81dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/letterPT"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/wordTV"
            app:layout_constraintStart_toEndOf="@+id/giveLetterTV"
            android:importantForAutofill="no"/>
    <ImageView
            android:layout_width="288dp"
            android:layout_height="235dp" app:srcCompat="@drawable/s0"
            android:id="@+id/pictureIV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:srcCompat="@drawable/s0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/letterPT" android:contentDescription="@string/todo"/>
    <TextView
            android:layout_width="139dp"
            android:layout_height="25dp"
            android:id="@+id/howManyAttTV" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/white"
            android:paddingLeft="7dp"/>
    <Button
            android:text="@string/check"
            android:layout_width="115dp"
            android:layout_height="42dp"
            android:id="@+id/checkButton"
            android:background="@drawable/ic_launcher_background" android:textColor="@android:color/white"
            android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/wordTV"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:layout_width="203dp"
            android:layout_height="58dp"
            android:id="@+id/communicatorTV" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/howManyAttTV" android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent" android:textSize="24sp"
            android:textStyle="bold" android:textAlignment="center"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="131dp"
            android:layout_height="48dp"
            android:id="@+id/newGameButton" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/howManyAttTV"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>